apps/production/code-server/ingressConfig.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: code-server
  namespace: code-server
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`code.vandelocht.uk`)
      kind: Rule
      services:
        - name: code-server-http
          port: 3000
      middlewares:
        - name: svc-code-server-headers
        - name: code-server-dashboard-basicauth
  tls:
    secretName: code-vandelocht-uk-production-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: svc-code-server-headers
  namespace: code-server
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: code-server-dashboard-basicauth
  namespace: code-server
spec:
  basicAuth:
    secret: code-server-dashboard-auth
